Fix spacing around header

--- a/css/daymode.css
+++ b/css/daymode.css
@@ -105,7 +105,7 @@ html {
   }
 
   to {
-    border-color: rgb(53, 169, 35);
-    color: rgb(53, 169, 35);
+    border-color: rgb(23, 118, 9);
+    color: rgb(23, 118, 9);
   }
 }
