--- a/css/main.css
+++ b/css/main.css
@@ -53,7 +53,7 @@ body {
     "appTitle levelTimer";
   grid-template-columns: 4fr 4fr;
   grid-template-rows: 1fr 4fr;
-  margin-top: 1.7em;
+  margin-top: 0.5em;
   margin-bottom: 0.8em;
 }
 
@@ -62,6 +62,7 @@ body {
   font-weight: 200;
   font-size: 3em;
   grid-area: appTitle;
+  margin-top: 0.5em;
   transform: rotate(-20deg);
 }
 
@@ -99,7 +100,7 @@ body {
   display: flex;
   grid-area: progressBar;
   justify-content: space-evenly;
-  margin-top: 1em;
+  margin-top: 0.5em;
 }
 
 .progress-bubble {
